--- a/p.html
+++ b/p.html
@@ -54,7 +54,7 @@
 			<div data-aos="fade-left"class="col-sm-6">
 				
 				<h1 >About Me</h1>
-				<h5>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</h5>
+				<h5>Hi I am Amritash Srivastava.I am from Lucknow.I am currently pursuing my btech in computer science from SRM Institute of Science and Technology.I have interest in Competitive Programming and Web Development.</h5>
 			</div>
 </div>
 </div>
@@ -108,31 +108,6 @@
 	</div>
 </div>
 
-<!--contact -->
-<div class="contact" id="x">
-<div class="container">
-		<h1 data-aos="fade-up" >Contact Me</h1>
-		<form data-aos="fade-up">
-  <div class="form-group">
-    <label for="Name">Name</label>
-    <input type="text"  class="form-control" id="Name" placeholder="Name">
-  </div>
-   <div class="form-group">
-      <label for="inputEmail4">Email</label>
-      <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
-    </div>
-     <div class="form-group">
-      <label for="Message">Message</label>
-      <input type="text" class="form-control" id="Message" placeholder="Message">
-    </div>
-   
-<div>  
-	<button type="submit" class="btn btn-primary">Submit</button>
-</div>     
-
-</form>
-	</div>
-</div>
 <!--footer-->
 <footer>
 	<div class="row justify-content-center">
